# weather-data-lab

./: .gitignore  LICENSE  pyproject.toml
data_engineering/: pyproject.toml
data_engineering/src/weather_inmet/: __init__.py  __main__.py  etl.py  logger.py
data_engineering/src/weather_inmet/schemas/: database_schema.py  metadata_schema.py
data_engineering/src/weather_openmeteo/: weatherdata.py
data_science/: pyproject.toml
data_science/notebooks/analises/: estacoes.ipynb
libs/weather/: pyproject.toml
libs/weather/src/weather/: weathercollector.py  weatherdata.py  weatherutils.py
libs/weather_inmet/: pyproject.toml
libs/weather_inmet/src/weather_inmet/: __init__.py  __main__.py  station_historical_data_collector.py  station_historical_data_process.py
libs/weather_inmet/src/weather_inmet/schemas/: database_schema.py
libs/weather_openmeteo/: pyproject.toml
libs/weather_openmeteo/src/weather_openmeteo/: weathercollector.py
