[project]
name = "weather-data-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "weather-inmet",
    "weather-openmeteo",
]

[tool.uv.workspace]
members = [
    "libs/weather_openmeteo",
    "libs/weather_inmet",
]

[tool.uv.sources]
weather-inmet = { workspace = true }
weather-openmeteo = { workspace = true }

