[project]
name = "weather-data-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "weather-inmet",
]

[tool.uv.workspace]
members = [

]

[tool.uv.sources]
data-enginnering = { workspace = true }
weather-inmet = { path = "data_engineering" }
weather-openmeteo = { path = "data_engineering" }

