[project]
name = "weather-data-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-science",
    "weather-inmet",
]

[tool.uv.workspace]
members = ["data_science"

]

[tool.uv.sources]
data-enginnering = { workspace = true }
weather-inmet = { path = "data_engineering" }
weather-openmeteo = { path = "data_engineering" }
data-science = { workspace = true }

