[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexandre-Esposte", email = "alexandreesposte@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
